--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -167,18 +167,6 @@ main {
       max-width: 100%;
     }
   }
-
-  // .pattern-circle {
-  //   position: absolute;
-  //   top: 32.56rem;
-  //   right: 34.06rem;
-  //   z-index: 2;
-  //   width: 100%;
-
-  //   img {
-  //     max-width: 100%;
-  //   }
-  // }
 }
 
 .hero {
@@ -232,15 +220,6 @@ main {
 
   .wrapper > * {
     flex: 1 1 21.5625rem;
-  }
-
-  .skill-pattern-rings {
-    position: absolute;
-    top: 67.31rem;
-    right: -14.94rem;
-    img {
-      max-width: 100%;
-    }
   }
 }
 
